--- a/pages/reportes.html
+++ b/pages/reportes.html
@@ -5,12 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Rental site</title>
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="../styles/css/style.css" />
+		<script src="../data/scriptCarga.js"></script>
 	</head>
 	<body>
 		<header>
