Cambio description en cada página

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Rental site</title>
-		<meta
-			name="description"
-			content="Ofrecemos alquiler de productos para producciones cinematográficas. Desde vestuario y mobiliario hasta equipos de sonido y iluminación. Contáctanos para más información."
-		/>
+		<meta name="description" content="Tareas pendientes diarias. Tanto como Entregas o Devoluciones" />
 		<meta
 			name="keywords"
 			content="pickup, devoluciones, entregas, alquiler, productos, eventos, mobiliario, sonido, iluminación, cine, rodaje, set"
