--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Rental site</title>
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
+		<meta name="description" content="Listado de clientes de la empresa" />
 		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
