--- a/pages/reportes.html
+++ b/pages/reportes.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Rental site</title>
+		<meta name="description" content="Reportes varios que permiten ver la evolución de la empresa" />
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
