Cambio title en todas las páginas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Rental site</title>
+		<title>Rental site - Dashboard de tareas pendientes</title>
 		<meta name="description" content="Tareas pendientes diarias. Tanto como Entregas o Devoluciones" />
 		<meta
 			name="keywords"
