--- a/pages/reportes.html
+++ b/pages/reportes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Rental site</title>
+		<title>Rental site - Reportes varios</title>
 		<meta name="description" content="Reportes varios que permiten ver la evolución de la empresa" />
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
