--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Rental site</title>
+		<title>Rental site - Listado de clientes</title>
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
 		<meta name="description" content="Listado de clientes de la empresa" />
 		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
