--- a/pages/ordenes.html
+++ b/pages/ordenes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Rental site</title>
+		<title>Rental site - Listado de ordenes de trabajo</title>
 		<meta name="description" content="Listado histórico de ordenes de trabajo" />
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
