SEO- cambio keywords

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Tareas pendientes diarias. Tanto como Entregas o Devoluciones" />
 		<meta
 			name="keywords"
-			content="pickup, devoluciones, entregas, alquiler, productos, eventos, mobiliario, sonido, iluminación, cine, rodaje, set"
+			content="dashboard, pickup, devoluciones, entregas, alquiler, productos, eventos, mobiliario, sonido, iluminación, cine, rodaje, set"
 		/>
 		<meta name="robots" content="index, follow" />
 		<link rel="shortcut icon" href="./images/cart_icon.png" type="image/x-icon" />
