--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Rental site - Listado de productos</title>
 		<meta name="description" content="Listado de productos existentes." />
+		<meta
+			name="keywords"
+			content="productos, pickup, devoluciones, entregas, alquiler, eventos, mobiliario, sonido, iluminación, cine, rodaje, set"
+		/>
 		<link rel="shortcut icon" href="../images/cart_icon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../styles/css/bootstrap.min.css" />
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
